...
            "state" : "translated",
            "value" : "所有請求必須傳送 \"Authorization: Bearer <token>\"。重新產生會使已連線的用戶端失效——它們需要使用新權杖。"
          }
        }
      }
    },
    "Allow" : {
      "extractionState" : "manual",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "允许"
...
            "state" : "translated",
            "value" : "播放重點標示"
          }
        }
      }
    },
    "Playback position" : {
      "comment" : "A label for a slider that shows the current playback position.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
...
